fix a11y web audio truncation at 200% zoom
Bug: 963183

--- a/front_end/web_audio/webAudio.css
+++ b/front_end/web_audio/webAudio.css
@@ -37,6 +37,10 @@
   white-space: pre-line;
 }
 
+.web-audio-content-container {
+  overflow-y: auto;
+}
+
 .context-detail-container {
   flex: none;
   display: flex;
